--- a/genindex.html
+++ b/genindex.html
@@ -307,6 +307,8 @@
         <li><a href="copyxnat.pyreporter.progress.html#module-copyxnat.pyreporter.progress">module</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     copyxnat.pyreporter.pyreporter
 
@@ -314,8 +316,6 @@
         <li><a href="copyxnat.pyreporter.pyreporter.html#module-copyxnat.pyreporter.pyreporter">module</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     copyxnat.ui
 
@@ -522,8 +522,6 @@
         <li><a href="copyxnat.xnat_backend.simple_xnat.html#copyxnat.xnat_backend.simple_xnat.SimpleXnatResourceBase.create_on_server">(copyxnat.xnat_backend.simple_xnat.SimpleXnatResourceBase method)</a>
 </li>
       </ul></li>
-      <li><a href="copyxnat.xnat_backend.xnat_rest_client.html#copyxnat.xnat_backend.xnat_rest_client.XnatRestClient.create_resource_folder">create_resource_folder() (copyxnat.xnat_backend.xnat_rest_client.XnatRestClient method)</a>
-</li>
       <li><a href="copyxnat.pyreporter.console.html#copyxnat.pyreporter.console.AnsiCodes.CYAN">CYAN (copyxnat.pyreporter.console.AnsiCodes attribute)</a>
 </li>
   </ul></td>
@@ -539,8 +537,6 @@
 </li>
         <li><a href="copyxnat.xnat_backend.simple_xnat.html#copyxnat.xnat_backend.simple_xnat.SimpleXnatItem.datatype">(copyxnat.xnat_backend.simple_xnat.SimpleXnatItem method)</a>
 </li>
-        <li><a href="copyxnat.xnat_backend.xnat_rest_client.html#copyxnat.xnat_backend.xnat_rest_client.XnatRestClient.datatype">(copyxnat.xnat_backend.xnat_rest_client.XnatRestClient method)</a>
-</li>
       </ul></li>
       <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatServer.datatypes">datatypes() (copyxnat.xnat.xnat_interface.XnatServer method)</a>
 
@@ -548,8 +544,6 @@
         <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatServer.datatypes">(copyxnat.xnat_backend.pyxnat_server.PyXnatServer method)</a>
 </li>
         <li><a href="copyxnat.xnat_backend.simple_xnat.html#copyxnat.xnat_backend.simple_xnat.SimpleXnatServer.datatypes">(copyxnat.xnat_backend.simple_xnat.SimpleXnatServer method)</a>
-</li>
-        <li><a href="copyxnat.xnat_backend.xnat_rest_client.html#copyxnat.xnat_backend.xnat_rest_client.XnatRestClient.datatypes">(copyxnat.xnat_backend.xnat_rest_client.XnatRestClient method)</a>
 </li>
       </ul></li>
       <li><a href="copyxnat.pyreporter.console_logger.html#copyxnat.pyreporter.console_logger.ConsoleLogger.debug">debug() (copyxnat.pyreporter.console_logger.ConsoleLogger method)</a>
@@ -567,13 +561,7 @@
       <li><a href="versioneer.html#versioneer.do_vcs_install">do_vcs_install() (in module versioneer)</a>
 </li>
       <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatServer.does_request_succeed">does_request_succeed() (copyxnat.xnat.xnat_interface.XnatServer method)</a>
-
-      <ul>
-        <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatServer.does_request_succeed">(copyxnat.xnat_backend.pyxnat_server.PyXnatServer method)</a>
 </li>
-        <li><a href="copyxnat.xnat_backend.simple_xnat.html#copyxnat.xnat_backend.simple_xnat.SimpleXnatServer.does_request_succeed">(copyxnat.xnat_backend.simple_xnat.SimpleXnatServer method)</a>
-</li>
-      </ul></li>
       <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatFile.download_file">download_file() (copyxnat.xnat_backend.pyxnat_server.PyXnatFile method)</a>
 
       <ul>
@@ -627,8 +615,6 @@
       <ul>
         <li><a href="copyxnat.xnat_backend.simple_xnat.html#copyxnat.xnat_backend.simple_xnat.SimpleXnatServer.experiment_list">(copyxnat.xnat_backend.simple_xnat.SimpleXnatServer method)</a>
 </li>
-        <li><a href="copyxnat.xnat_backend.xnat_rest_client.html#copyxnat.xnat_backend.xnat_rest_client.XnatRestClient.experiment_list">(copyxnat.xnat_backend.xnat_rest_client.XnatRestClient method)</a>
-</li>
       </ul></li>
       <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatSubject.experiments">experiments() (copyxnat.xnat_backend.pyxnat_server.PyXnatSubject method)</a>
 
@@ -670,8 +656,6 @@
 
       <ul>
         <li><a href="copyxnat.xnat_backend.simple_xnat.html#copyxnat.xnat_backend.simple_xnat.SimpleXnatFile.file_attributes">(copyxnat.xnat_backend.simple_xnat.SimpleXnatFile method)</a>
-</li>
-        <li><a href="copyxnat.xnat_backend.xnat_rest_client.html#copyxnat.xnat_backend.xnat_rest_client.XnatRestClient.file_attributes">(copyxnat.xnat_backend.xnat_rest_client.XnatRestClient method)</a>
 </li>
       </ul></li>
   </ul></td>
@@ -889,10 +873,6 @@
 </li>
       </ul></li>
   </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="copyxnat.xnat_backend.xnat_rest_client.html#copyxnat.xnat_backend.xnat_rest_client.XnatRestClient.items">items() (copyxnat.xnat_backend.xnat_rest_client.XnatRestClient method)</a>
-</li>
-  </ul></td>
 </tr></table>
 
 <h2 id="L">L</h2>
@@ -957,6 +937,8 @@
       <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.make_project_names_unique">make_project_names_unique() (copyxnat.xnat.xml_cleaner.XmlCleaner method)</a>
 </li>
       <li><a href="copyxnat.config.app_settings.html#copyxnat.config.app_settings.TransferMode.META">META (copyxnat.config.app_settings.TransferMode attribute)</a>
+</li>
+      <li><a href="copyxnat.xnat_backend.xnat_rest_client.html#copyxnat.xnat_backend.xnat_rest_client.XnatRestClient.meta">meta() (copyxnat.xnat_backend.xnat_rest_client.XnatRestClient method)</a>
 </li>
       <li><a href="copyxnat.xnat_backend.simple_xnat.html#copyxnat.xnat_backend.simple_xnat.SimpleXnatItem.metadata_from_parent">metadata_from_parent() (copyxnat.xnat_backend.simple_xnat.SimpleXnatItem class method)</a>
 </li>
@@ -1113,10 +1095,10 @@
         <li><a href="copyxnat.commands.show_command.html#copyxnat.commands.show_command.ShowCommand.NAME">(copyxnat.commands.show_command.ShowCommand attribute)</a>
 </li>
       </ul></li>
-      <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatBase.name_label">name_label() (copyxnat.xnat.xnat_interface.XnatBase method)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatBase.name_label">name_label() (copyxnat.xnat.xnat_interface.XnatBase method)</a>
+</li>
       <li><a href="copyxnat.xnat.copy_cache.html#copyxnat.xnat.copy_cache.CacheBox.new_cache">new_cache() (copyxnat.xnat.copy_cache.CacheBox method)</a>
 </li>
       <li><a href="copyxnat.pyreporter.progress.html#copyxnat.pyreporter.progress.Progress.next_progress">next_progress() (copyxnat.pyreporter.progress.Progress method)</a>
@@ -1133,8 +1115,6 @@
         <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatServer.num_experiments">(copyxnat.xnat_backend.pyxnat_server.PyXnatServer method)</a>
 </li>
         <li><a href="copyxnat.xnat_backend.simple_xnat.html#copyxnat.xnat_backend.simple_xnat.SimpleXnatServer.num_experiments">(copyxnat.xnat_backend.simple_xnat.SimpleXnatServer method)</a>
-</li>
-        <li><a href="copyxnat.xnat_backend.xnat_rest_client.html#copyxnat.xnat_backend.xnat_rest_client.XnatRestClient.num_experiments">(copyxnat.xnat_backend.xnat_rest_client.XnatRestClient method)</a>
 </li>
       </ul></li>
   </ul></td>
@@ -1181,6 +1161,8 @@
       </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="copyxnat.xnat_backend.utis.html#copyxnat.xnat_backend.utis.Utils.optional_params">optional_params() (copyxnat.xnat_backend.utis.Utils static method)</a>
+</li>
       <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatType.OUT_RESOURCE">OUT_RESOURCE (copyxnat.xnat.xnat_interface.XnatType attribute)</a>
 </li>
       <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatItemWithInOutResources.out_resources">out_resources() (copyxnat.xnat_backend.pyxnat_server.PyXnatItemWithInOutResources method)</a>
@@ -1427,15 +1409,21 @@
         <li><a href="versioneer.html#versioneer.render_pep440_pre">(in module versioneer)</a>
 </li>
       </ul></li>
-      <li><a href="copyxnat.xnat_backend.xnat_rest_client.html#copyxnat.xnat_backend.xnat_rest_client.XnatRestClient.request">request() (copyxnat.xnat_backend.xnat_rest_client.XnatRestClient method)</a>
+      <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatServer.request">request() (copyxnat.xnat_backend.pyxnat_server.PyXnatServer method)</a>
 
       <ul>
+        <li><a href="copyxnat.xnat_backend.simple_xnat.html#copyxnat.xnat_backend.simple_xnat.SimpleXnatServer.request">(copyxnat.xnat_backend.simple_xnat.SimpleXnatServer method)</a>
+</li>
+        <li><a href="copyxnat.xnat_backend.xnat_rest_client.html#copyxnat.xnat_backend.xnat_rest_client.XnatRestClient.request">(copyxnat.xnat_backend.xnat_rest_client.XnatRestClient method)</a>
+</li>
         <li><a href="copyxnat.xnat_backend.xnat_session.html#copyxnat.xnat_backend.xnat_session.XnatSession.request">(copyxnat.xnat_backend.xnat_session.XnatSession method)</a>
 </li>
       </ul></li>
-      <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatServer.request_json_property">request_json_property() (copyxnat.xnat_backend.pyxnat_server.PyXnatServer method)</a>
+      <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatServer.request_json_property">request_json_property() (copyxnat.xnat.xnat_interface.XnatServer method)</a>
 
       <ul>
+        <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatServer.request_json_property">(copyxnat.xnat_backend.pyxnat_server.PyXnatServer method)</a>
+</li>
         <li><a href="copyxnat.xnat_backend.simple_xnat.html#copyxnat.xnat_backend.simple_xnat.SimpleXnatServer.request_json_property">(copyxnat.xnat_backend.simple_xnat.SimpleXnatServer method)</a>
 </li>
         <li><a href="copyxnat.xnat_backend.xnat_rest_client.html#copyxnat.xnat_backend.xnat_rest_client.XnatRestClient.request_json_property">(copyxnat.xnat_backend.xnat_rest_client.XnatRestClient method)</a>
@@ -1451,12 +1439,10 @@
         <li><a href="copyxnat.xnat_backend.xnat_rest_client.html#copyxnat.xnat_backend.xnat_rest_client.XnatRestClient.request_string">(copyxnat.xnat_backend.xnat_rest_client.XnatRestClient method)</a>
 </li>
       </ul></li>
-      <li><a href="copyxnat.xnat_backend.xnat_rest_client.html#copyxnat.xnat_backend.xnat_rest_client.XnatRestClient.request_xml_string">request_xml_string() (copyxnat.xnat_backend.xnat_rest_client.XnatRestClient method)</a>
-</li>
-      <li><a href="copyxnat.xnat_backend.xnat_session.html#copyxnat.xnat_backend.xnat_session.SessionId.reset">reset() (copyxnat.xnat_backend.xnat_session.SessionId method)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="copyxnat.xnat_backend.xnat_session.html#copyxnat.xnat_backend.xnat_session.SessionId.reset">reset() (copyxnat.xnat_backend.xnat_session.SessionId method)</a>
+</li>
       <li><a href="copyxnat.api.run_command.html#copyxnat.api.run_command.resolve_projects">resolve_projects() (in module copyxnat.api.run_command)</a>
 </li>
       <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatType.RESOURCE">RESOURCE (copyxnat.xnat.xnat_interface.XnatType attribute)</a>
@@ -1465,8 +1451,6 @@
 
       <ul>
         <li><a href="copyxnat.xnat_backend.simple_xnat.html#copyxnat.xnat_backend.simple_xnat.SimpleXnatResourceBase.resource_attributes">(copyxnat.xnat_backend.simple_xnat.SimpleXnatResourceBase method)</a>
-</li>
-        <li><a href="copyxnat.xnat_backend.xnat_rest_client.html#copyxnat.xnat_backend.xnat_rest_client.XnatRestClient.resource_attributes">(copyxnat.xnat_backend.xnat_rest_client.XnatRestClient method)</a>
 </li>
       </ul></li>
       <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatItemWithResources.resources">resources() (copyxnat.xnat_backend.pyxnat_server.PyXnatItemWithResources method)</a>
@@ -1654,8 +1638,6 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="copyxnat.xnat_backend.xnat_rest_client.html#copyxnat.xnat_backend.xnat_rest_client.XnatRestClient.upload_file">upload_file() (copyxnat.xnat_backend.xnat_rest_client.XnatRestClient method)</a>
-</li>
-      <li><a href="copyxnat.xnat_backend.xnat_rest_client.html#copyxnat.xnat_backend.xnat_rest_client.XnatRestClient.upload_text_file">upload_text_file() (copyxnat.xnat_backend.xnat_rest_client.XnatRestClient method)</a>
 </li>
       <li><a href="copyxnat.commands.check_datatypes_command.html#copyxnat.commands.check_datatypes_command.CheckDatatypesCommand.USE_DST_SERVER">USE_DST_SERVER (copyxnat.commands.check_datatypes_command.CheckDatatypesCommand attribute)</a>
 
@@ -1941,7 +1923,7 @@
     </div>
     <div class="footer" role="contentinfo">
         &#169; Copyright 2021, Tom Doel.
-      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 4.0.2.
+      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 4.0.3.
     </div>
   </body>
 </html>
