--- a/versioneer.html
+++ b/versioneer.html
@@ -16,7 +16,7 @@
     
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
-    <link rel="prev" title="copyxnat.xnat_backend.xnat_session module" href="copyxnat.xnat_backend.xnat_session.html" /> 
+    <link rel="prev" title="copyxnat.xnat_backend.server_factory module" href="copyxnat.xnat_backend.server_factory.html" /> 
   </head><body>
     <div class="related" role="navigation" aria-label="related navigation">
       <h3>Navigation</h3>
@@ -28,7 +28,7 @@
           <a href="py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
         <li class="right" >
-          <a href="copyxnat.xnat_backend.xnat_session.html" title="copyxnat.xnat_backend.xnat_session module"
+          <a href="copyxnat.xnat_backend.server_factory.html" title="copyxnat.xnat_backend.server_factory module"
              accesskey="P">previous</a> |</li>
         <li class="nav-item nav-item-0"><a href="index.html">CopyXnat  documentation</a> &#187;</li>
           <li class="nav-item nav-item-1"><a href="modules.html" accesskey="U">copyxnat</a> &#187;</li>
@@ -488,8 +488,8 @@ two directory levels for an appropriately named parent directory</p>
 </ul>
 
   <h4>Previous topic</h4>
-  <p class="topless"><a href="copyxnat.xnat_backend.xnat_session.html"
-                        title="previous chapter">copyxnat.xnat_backend.xnat_session module</a></p>
+  <p class="topless"><a href="copyxnat.xnat_backend.server_factory.html"
+                        title="previous chapter">copyxnat.xnat_backend.server_factory module</a></p>
   <div role="note" aria-label="source link">
     <h3>This Page</h3>
     <ul class="this-page-menu">
@@ -521,7 +521,7 @@ two directory levels for an appropriately named parent directory</p>
           <a href="py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
         <li class="right" >
-          <a href="copyxnat.xnat_backend.xnat_session.html" title="copyxnat.xnat_backend.xnat_session module"
+          <a href="copyxnat.xnat_backend.server_factory.html" title="copyxnat.xnat_backend.server_factory module"
              >previous</a> |</li>
         <li class="nav-item nav-item-0"><a href="index.html">CopyXnat  documentation</a> &#187;</li>
           <li class="nav-item nav-item-1"><a href="modules.html" >copyxnat</a> &#187;</li>
